Add support for //PREVIEW